--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,10 @@ header {
 .nav {
     display: flex;
     flex-direction: column;
-    padding: 0 50px;
+    padding: 10px 50px;
     margin-left: auto;
     gap: 20px;
+
 }
 
 .nav a {
@@ -92,8 +93,8 @@ header {
 
 #cambiarTheme {
     background-color: #ffffff65;
-    width: 7em;
-    height: 3em;
+    width: 5em;
+    height: 2.5em;
     border-radius: 10em;
     padding: 0 0.5em;
 
@@ -103,18 +104,18 @@ header {
     position: relative;
     display: flex;
     align-items: center;
-   
+    cursor: pointer;
 }
 
 
 #pokeball-button {
     cursor: pointer;
-    width: 2.5em;
-    height: 2.5em;
+    width: 2em;
+    height: 2em;
     border-radius: 50%;
     position: absolute;
     box-shadow: 0 8px 40px rgba(0,0,0, .2);
-    transition: transform .3s ease;
+    transition: transform .2s ease;
 }
 
 .light-theme {
@@ -145,23 +146,9 @@ body.darkmode .nav a {
 
 .darkmode #pokeball-button{
     background-image: url('../img/ultraball.png');
-    transform: translateX(3.5em) rotate(360deg);
+    transform: translateX(2em) rotate(360deg);
     background-color: var(--dark-color);
     box-shadow: 0 8px 40px rgba(0,0,0, .3);
-}
-.contenido-info { 
-    width: 90%;
-    background-color: var(--red-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Centra horizontalmente */
-    margin-top: 40px; /* Aumenta el margen superior para mayor separación */
-    margin-bottom: 20px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    border-bottom: 5%;
-    
-
 }
 
 body.darkmode .contenido-info { 
@@ -178,6 +165,21 @@ body.darkmode .contenido-info {
     
 
 }
+
+/*contenido*/
+.contenido-info { 
+    width: 90%;
+    background-color: var(--red-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra horizontalmente */
+    margin-top: 40px; /* Aumenta el margen superior para mayor separación */
+    margin-bottom: 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    border-bottom: 5%;
+}
+
 .contenido-info h1{
     font-family: 'Fascinate', cursive;
     font-size:36px;
@@ -202,12 +204,14 @@ body.darkmode .contenido-info {
 }
 
 
-
-@media screen and (min-width: 576px) {}
+@media screen and (min-width: 576px) {
+    
+}
 
 @media screen and (min-width: 768px) {
     .nav {
         display: flex;
+        align-items: center;
         flex-direction: row;
         gap: 100px;
     }
@@ -247,6 +251,22 @@ body.darkmode .contenido-info {
         font-size: 15px;
     }
 
+    #cambiarTheme {
+
+        width: 7em;
+        height: 3em;
+        border-radius: 10em;
+        padding: 0 0.5em;
+    
+    }
+    #pokeball-button {
+        width: 2.5em;
+        height: 2.5em;
+    }
+
+    .darkmode #pokeball-button{
+        transform: translateX(3.5em) rotate(360deg);
+    }
 }
 
 @media screen and (min-width: 1200px) {
