--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,10 @@ body.darkmode .nav a {
     box-shadow: 0 8px 40px rgba(0,0,0, .3);
 }
 
+.darkmode .logo {
+    
+}
+
 body.darkmode .contenido-info { 
     width: 90%;
     background-color: var(--dark-color);
@@ -162,8 +166,6 @@ body.darkmode .contenido-info {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     border-bottom: 5%;
-    
-
 }
 
 /*contenido*/
