--- a/archivos/css/pokedex.css
+++ b/archivos/css/pokedex.css
@@ -87,7 +87,7 @@
     display: flex;
     position: relative;
     width: 100%;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     gap: 10px;
     font-size: 5px;
     top: -5px;
@@ -95,7 +95,7 @@
 
 .card-tipos span {
     text-transform: capitalize;
-    padding: 2px 20px;
+    padding: 2px 5px;
     border-radius: 5px;
     color: rgb(48, 48, 48);
     font-weight: 500;
@@ -115,12 +115,8 @@
 
 
 
-.span-grass{ 
-    background: #bfe487;
-}
-
 .span-poison {
-    background-color: rgb(202, 71, 183)
+    /* background-color: */
 }
 
 /* darkmode */
@@ -203,6 +199,10 @@ body.darkmode #tituloPokedex {
         font-size: 15px;
     }
    
+    .card-tipos span {
+      
+        padding: 2px 15px;
+    }
 }
 
 @media screen and (min-width: 768px)  {
