--- a/archivos/css/pokedex.css
+++ b/archivos/css/pokedex.css
@@ -180,6 +180,68 @@ body.darkmode .search-bar button:hover{
 body.darkmode .search-bar {
     background: #83c5be
 }
+/**/
+#pokemon-detalle {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    z-index: 1000;
+    backdrop-filter: blur(50%); /* Añade un desenfoque al fondo */
+}
+
+#pokemon-detalle.visible {
+    display: block; /* Muestra el elemento cuando tiene la clase 'visible' */
+}
+
+#pokemon-detalle h2 {
+    margin-bottom: 10px;
+}
+
+#pokemon-detalle p {
+    margin-bottom: 15px;
+}
+
+#pokemon-detalle button {
+    background-color: rgb(243, 71, 71);;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+#contenido-detalles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    white-space: pre-line; 
+}
+.contenido-detalle {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 100%; /* Ajusta según sea necesario */
+   
+    
+}
+#pokemon-detalle button:hover {
+    background-color: #0056b3;
+}
+
+
+#btn-cerrar {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 20px;
+}
+
 
 @media screen and (min-width:230px) {
     #cards-container {
