--- a/archivos/css/build.css
+++ b/archivos/css/build.css
@@ -12,27 +12,25 @@
 }
 
 
-
-.contenido-info td{
-    width: 100px; /* Establece un ancho mínimo para las celdas */
-    height: 100px; /* Establece una altura mínima para las celdas */
-    border: 1px solid #ccc; /* Agrega un borde para separar las celdas */
-    
-}
-
 body.darkmode .build-team{
     background-color: var(--dark-color-seccion);
     width: 100%;
+   
 }
 
 .build-team{
     background-color:aliceblue;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  
 }
 
+.grid-pokemon{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 0.5em;
+    padding: 20px 0;
+}
 
 
 body.darkmode .grid-pokemon td{
@@ -145,10 +143,10 @@ body.darkmode .btn-search:hover{
     height:     235px;
 }
 
-.delete-button {
+#btn-eliminar {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     background-color: #ff0000; /* Color de fondo del botón */
     color: #ffffff; /* Color del texto del botón */
     border: none;
@@ -156,14 +154,23 @@ body.darkmode .btn-search:hover{
     padding: 8px; /* Espaciado interno del botón */
     cursor: pointer;
 }
-
-/*
-.grid-pokemon td{
-    border: none; 
-    padding: 10px; 
-    border-radius: 10px; 
-    
-       
+.grid-pokemon {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 0.5em;
+    padding: 20px 0;
 }
 
-*/
+@media screen and (min-width: 992px)  {
+    .grid-pokemon {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1400px) {
+    .grid-pokemon {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+}
