--- a/archivos/css/pokedex.css
+++ b/archivos/css/pokedex.css
@@ -2,6 +2,7 @@
 
 :root {
     --dark-color-seccion: rgb(62, 77, 117);
+    --dark-color: rgb(45, 45, 46);
 }
 
 
@@ -195,17 +196,12 @@ body.darkmode .search-bar {
     backdrop-filter: blur(50%); /* Añade un desenfoque al fondo */
 }
 
+
 #pokemon-detalle.visible {
     display: block; /* Muestra el elemento cuando tiene la clase 'visible' */
 }
 
-#pokemon-detalle h2 {
-    margin-bottom: 10px;
-}
 
-#pokemon-detalle p {
-    margin-bottom: 15px;
-}
 
 #pokemon-detalle button {
     background-color: rgb(243, 71, 71);;
@@ -218,13 +214,12 @@ body.darkmode .search-bar {
 #contenido-detalles {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    text-align:start;
     white-space: pre-line; 
+
 }
 .contenido-detalle {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     max-width: 100%; /* Ajusta según sea necesario */
    
     
@@ -236,10 +231,8 @@ body.darkmode .search-bar {
 
 #btn-cerrar {
     position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 20px;
+    left: 82%;
+   top: 1%;
 }
 
 
