--- a/archivos/css/pokedex.css
+++ b/archivos/css/pokedex.css
@@ -30,6 +30,7 @@
 }
 
 .pokemon-card {
+    cursor: pointer;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -39,7 +40,19 @@
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.8);
     padding: 5px;
     margin: 15px 0px;
+    margin: 15px 0px;
+    transition: transform 0.3s; /* Agrega una transición suave al transform */
 }
+.pokemon-card:hover{
+    outline: 2px solid rgb(44, 44, 44); /* Cambia el color y grosor del borde al pasar el ratón */
+    transform: translateY(-10px);
+}
+
+body.darkmode .pokemon-card:hover{
+    outline: 2px solid rgb(0, 0, 0); /* Cambia el color y grosor del borde al pasar el ratón */
+    transform: translateY(-10px);
+}
+
 
 
 .container-img-pk {
@@ -181,60 +194,70 @@ body.darkmode .search-bar button:hover{
 body.darkmode .search-bar {
     background: #83c5be
 }
-/**/
-#pokemon-detalle {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-    z-index: 1000;
-    backdrop-filter: blur(50%); /* Añade un desenfoque al fondo */
+
+/* modal info pokemon */
+/* #modal-dialog-info {
+    width: 600px;
+} */
+
+.modal-header h1{
+    margin-left: 30px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
-
-#pokemon-detalle.visible {
-    display: block; /* Muestra el elemento cuando tiene la clase 'visible' */
+#info-pokemon {
+    display: flex;
+    flex-direction: row;
+    gap: 10%;
+    padding: 30px;
+    position: relative;
 }
 
-
-
-#pokemon-detalle button {
-    background-color: rgb(243, 71, 71);;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 4px;
+#img-pokemon-info {
+    border: 1px solid black;
+    background: rgb(231, 231, 231);
+    width: 50%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-#contenido-detalles {
+
+#img-pokemon-info img{
+    width: 100%;
+}
+#stats-info{
     display: flex;
     flex-direction: column;
-    text-align:start;
-    white-space: pre-line; 
-
+    gap: 5px;
+    width: 40%;
 }
-.contenido-detalle {
-    display: grid;
-    max-width: 100%; /* Ajusta según sea necesario */
-   
+
+.label-stat{
+    font-size: 15px;
     
 }
-#pokemon-detalle button:hover {
-    background-color: #0056b3;
+
+#ps-bar {
+    background-color: rgb(0, 204, 0);
 }
 
-
-#btn-cerrar {
-    position: absolute;
-    left: 82%;
-   top: 1%;
+#attack-bar{
+    background-color: red;
 }
 
+#special-attack-bar {
+    background-color: blueviolet;
+}
+
+#special-defense-bar {
+    background-color: rgb(94, 177, 255);
+}
+
+#speed-bar {
+    background-color: orangered;
+}
 
 @media screen and (min-width:230px) {
     #cards-container {
